--- a/internal/peasant/docker-compose.yml
+++ b/internal/peasant/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3.9"
 
 services:
-  postgres:
+
+  peasant_postgres:
     container_name: postgres
     image: "postgres:14-alpine"
     environment:
